--- a/预备知识.md
+++ b/预备知识.md
@@ -4,9 +4,13 @@
 
 # 序言
 
-由于集合论是宽泛的领域,在实分析中我们所运用到的不过是浅薄的实分析基础.于是本章是提供给志在速成集合论以进行实分析内容方面研究的人所准备的,关于集合论方面的内容反而会比较少.
+由于集合论是宽泛的领域,在实分析中我们所运用到的不过是浅薄的实分析基础.$\xcancel{于是本章是提供给志在速成集合论以进行实分析内容方面研究的人所准备的,关于集合论方面的内容反而会比较少.}$
 
 假定读者已经学过了傅里叶分析(数学分析),线性代数(高等代数).
+
+忽然发现好像已经远远超出了实分析所需要的基础知识框架,旨在进行实分析学习的读者选择实分析中常见的一部分看即可
+
+既然已经写了这么多,笔者打算将其写为一个在学完傅里叶分析与线性代数之后大部分课程的(主要是代数方面)一个基础知识.
 
 
 
@@ -289,7 +293,55 @@ $$
 
 ## 映射
 
-设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域,记作$\text{Dom}(f)$(domain),集$B$称为$f$的值域(image),记作$R(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
+### 二元关系与多元关系以及代数运算
+
+关系($\text{Relation}$)是指两个或两个以上的事物(事物可以是自己)之间的联系.在集合论中,最简单的关系是两个集合$A,B$之间的关系,我们将其称为二元关系,它可以看作一种对应($\text{correspondence}$).可以将其视为一个有序偶$(a,b)$其中$a\in A,b \in B$(从前文的积集可以得到严格定义,在配对公理$\bold{A.2}$中对其存在性进行了探讨),即当出现第一个元素$a$时,我们根据有序偶得到第二个元素$b$.于是,关系的核心在于有序偶,关系其实就是有序偶所构成的一个集合.
+
+根据我们上文的介绍,可以得到关系的严格定义如下
+
+定义(二元关系):一个集合$R$称为二元关系,如果存在集合$X,Y$,$R \subset X\times Y$.这样,二元关系$R$中的所有元素都是有序对,即,对任意$z \in R$存在$x\in X$和$y\in Y$满足$z = (x,y)$.
+
+一般地,用$R(x,y)$来表示$(x,y) \in R$,称$x$和$y$有关系$R$.有时习惯的写作$xRy$.
+
+接下来由于$R$依赖于$X$和$Y$,于是可以根据它们之间互相的依赖关系定义$R$在$X$上所占用的元素(是$X$的一个子集)与$Y$上所占用的元素(是$Y$的一个子集).
+
+令$R$为二元关系
+
+1. $R$的定义域定义为$\text{Dom}(R) = \{x: \exists y R(x,y)\}$
+2. $R$的值域定义为$\text{R}(R) = \{y| \exists xR(x,y)\}$
+3. 如果$R \subset X\times X$,则称$R$是$X$上的二元关系.
+
+接下来给出一些常见的定义
+
+1. 集合$X$在关系$R$下的像为
+   $$
+   R(X)=\text{Im}(X) = \{y \in \text{R}(R) : \exists x\in X(R(x,y))\}
+   $$
+   
+
+2. 集合$Y$在关系$R$下的逆像定义为
+   $$
+   R^{-1}(Y) = \{x\in \text{Dom}(R) : \exists y \in Y(R(x,y))\}
+   $$
+   
+
+3. 二元关系$R$的逆定义为
+   $$
+   R^{-1} = \{(x,y): (y,x) \in R\}
+   $$
+   
+
+4. 二元关系$R$和$S$的复合定义为
+   $$
+   S \circ R = \{(x,z): \exists y((x,y)\in R \land(y,z)\in S)\}
+   $$
+   
+
+不难发现二元关系对应的是二元$\text{Cartesian}$积,若我们将其推广到多元自然也可以得到多元关系,这部分请读着自行推导.
+
+### 映射
+
+设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域,记作$\text{Dom}(f)$(domain),集$B$称为$f$的值域(image),记作$\text{R}(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
 
 也可以利用配对公理构建映射:
 
@@ -347,7 +399,7 @@ $$
 
 # 序关系与序数
 
-虽然个人认为实分析并不需要序关系和序数的概念,但是由于基数和序数以及序关系存在着密不可分的联系,故此引入序关系.
+虽然个人认为实分析并不需要序关系和序数的概念,但是由于基数和序数以及序关系存在着密不可分的联系,故此引入序关系.(本节可略过)
 
 依照$\text{Bourbaki}$的观点,序结构连同拓扑和代数结构一道组成了数学结构的三大母体.
 
@@ -434,7 +486,7 @@ $$
 
 其次若$h$是$W_{1}[x']$到$W_{2}[f(x')]$的同构,显然有$h|W_{1}[x]$是到$W_{2}[h(x)]$的同构,显然有$f(x) = h(x)<_2f(x')$于是得到$x<_1x'$蕴含$f(x)<_2f(x')$
 
-不难发现$f$的定义域$\text{Dom}(f)$是$W_1$的前段.且有$R(f)$是$W_2$的前段.
+不难发现$f$的定义域$\text{Dom}(f)$是$W_1$的前段.且有$\text{R}(f)$是$W_2$的前段.
 
 于是$f$是由$W_1$的一个前段$\text{Dom}(f)$到$W_2$的一个前段$R(f)$的同构.
 
@@ -442,7 +494,7 @@ $$
 
 * 假设$\text{Dom}(f)\neq W_1$,则$\text{Dom}(f) = W_1[w]$是$W_1$的一个真前段.假设$R(f)\neq W_2$则存在$w' \in W_2$使得$R(f) = W_2[w']$因此$f$为$W_1[w]$与$W_2[w']$的同构.于是有$w \in \text{Dom}(f) = W_1[w]$即$w<w$,造成矛盾,于是可以得到3.成立
 * 假设$\text{R}(f)\neq W_2$,则可以得出$\text{Dom}(f) =W_1$
-* 若有$\text{Dom}(f)  = W_1$,$R(f) =W_2$则可以得到$f$为$W_1$到$W_2$的同构.
+* 若有$\text{Dom}(f)  = W_1$,$\text{R}(f) =W_2$则可以得到$f$为$W_1$到$W_2$的同构.
 
 由于$W_1$到$W_2$的同构是唯一的,于是得知三种情况至多只有一种成立$\Box$
 
@@ -464,33 +516,198 @@ $$
 
 首先,由于$\alpha$为一个序数,于是有$\alpha \subset \mathcal{P}(\alpha)$,对于$\alpha\sqcup\{\alpha\}$有$\forall x \in \alpha \sqcup \{\alpha\}\Rightarrow x \in \mathcal{P}(\alpha)\text{或} x = \alpha$,不难发现$\mathcal{P}(\alpha) \subset \mathcal{P}(\alpha \sqcup \{\alpha\})$并且$\alpha \in \mathcal{P}(\alpha \sqcup \{\alpha\})$于是得到$\alpha \sqcup\{\alpha\}$也是一个序数.
 
-根据我们先前的说法,将其称为$\alpha$的一个后继,再根据$\text{Peano}$公理中的类似定义,记$\alpha +1 = \alpha^{+} := \alpha \sqcup\{\alpha\}$.不难看出它是大于$\alpha$的最小序数.若$\alpha$不是任何序数的后继,则称$\alpha$为极限序数.
+根据我们先前的说法,将其称为$\alpha$的一个__后继__,再根据$\text{Peano}$公理中的类似定义,记$\alpha +1 = \alpha^{+} := \alpha \sqcup\{\alpha\}$.不难看出它是大于$\alpha$的最小序数.若$\alpha$不是任何序数的后继,则称$\alpha$为__极限序数__.
 
 接下来得到序数的几个性质:
 
 1. 若$\alpha$为序数,则$\alpha$的所有元素都是序数,所以由$\alpha = \{\beta: (\beta< \alpha)\land (\beta\text{为序数})\}$
 
-   由于$\alpha$为序数,于是$\alpha$是传递的,于是$\beta \subset \alpha$,于是若$x \in y\in \beta$有$y \in \alpha$于是有$x \in \alpha$.于是得到$x,y,\beta \in \alpha$由于$\alpha$为一个关于$\in$的良序集,于是不难得到$\beta$是传递集,于是不难得到$\beta$是$\alpha$的一个前序,即$\beta$也是序数.$\B
+   由于$\alpha$为序数,于是$\alpha$是传递的,于是$\beta \subset \alpha$,于是若$x \in y\in \beta$有$y \in \alpha$于是有$x \in \alpha$.于是得到$x,y,\beta \in \alpha$由于$\alpha$为一个关于$\in$的良序集,于是不难得到$\beta$是传递集,于是不难得到$\beta$是$\alpha$的一个前序,即$\beta$也是序数.$\Box$
 
 2. 如果$\alpha$是序数,且$B \subset \alpha$是传递集,则$B$是序数,且$B \in \alpha$.特别地,对于任意序数$\alpha,\beta$若$\beta \subsetneq \alpha$则$\beta \in \alpha$.
 
+   由于$B$是传递集,并且是良序集$\alpha$的子集,因此$\in$也是其上的良序,所以$B$是序数.同样根据$B$的传递性,如果$\gamma\in B$$\delta \in \gamma$则有$\delta \in B$.因此可以得到$B$是$\alpha$的真前段.这样,存在$\gamma \in \alpha$,$B = \{\delta \in \alpha:\delta \in \gamma\}$,这就是说$B = \gamma \in \alpha$.$\Box$
+
+3. 接下来均令$\alpha$,$\beta$,$\gamma$为序数,则对于任意非空序数集合$X$,$\bigcap X$是序数,并且$\bigcap X = \inf X$
+
+   $\bigcap X$是传递集的交,因此也是传递集,同时它是$X$中每一个序数的子集,因此$\in$是其上的一个良序.于是$\bigcap X$是一个序数.接下来证明$\bigcap X = \inf X$,由于对于任意的$\alpha \in X$有其为序数,于是有$\bigcap X \in \alpha$.于是有$\bigcap X \leq \alpha$.若存在$\beta$使得其为$X$的下界,那么必然有$\beta \in \bigcap X$亦即$\beta \leq \bigcap X$.这也就证明了$\bigcap X = \inf X$$\Box$
+
+4. 对于任意序数的集合$X$,$\bigcup X$是序数,并且$\bigcup X = \sup X$.
+
+   $\bigcup X$是传递集的并,于是对于任意的$x\in y\in \bigcup X$存在$\alpha \in X$满足$x\in y \in \alpha$由于$\alpha$为序数于是有$x\in \alpha$.于是有$x$也为序数,于是得到$\bigcup X$为序数.不妨令$\alpha = \bigcup X$则对于任意的$\beta \in \bigcup X$有$\beta \in \alpha$于是得到$\bigcup X$是$X$的上界.如果存在$\gamma$使得对于任意的$\beta \in \bigcup X$都有$\beta \leq \gamma$即$\alpha \leq \gamma$于是有$\bigcup X = \sup X$.
+
+5. 良序间的$<$关系带有良序性质,因此任意非空序数集合都在$<$下是良序集.
+
+   1. 传递性: 若$\alpha < \beta$,$\beta < \gamma$则$\alpha < \gamma$
+
+   2. 反称性:$\alpha < \beta$和$\beta< \alpha$不能同时成立
+
+   3. 线性:$\alpha<\beta$,$\alpha = \beta$和$\alpha>\beta$必有一个成立.
+
+   4. 正则性:每一个序数的非空集合都有$<$最小元;因此$<$是每一个序数集合上的良序.
+
+      
+
+   1. 我们将$<$看为$\in$即可,那么有$\alpha \in \beta$且$\beta \in \gamma$由于它们均为序数,于是可以得到$\beta \subset \gamma$于是有$\alpha \in \gamma$于是有$\alpha < \gamma$
+
+   2. 由正则公理$\bold{A.8}$可以推出$x \notin x$,若有$\alpha < \beta$且$\beta< \alpha$那么可以得到$\alpha < \alpha$即$\alpha \in \alpha$与正则公理相悖.
+
+   3. 假设$\alpha$和$\beta$都是序数,则$\alpha \cap \beta$也是序数;如果有$\alpha\cap \beta = \alpha$则自然有$\alpha \subset \beta$即$\alpha < \beta$或$\alpha = \beta$.类似地,若有$\alpha \cap \beta = \beta$则蕴涵$\beta \subset \alpha$即$\beta = \alpha$或$\beta < \alpha$.
+
+      $\alpha \cap \beta \subsetneq \alpha$和$\alpha \cap \beta \subsetneq \beta$不可能同时成立,因为$\alpha \cap \beta \in \alpha$并且$\alpha \cap \beta \in \beta$蕴含$\alpha \cap \beta \in \alpha \cap \beta$与正则公理冲突,于是其满足线性
+
+   4. 令$A$为一序数的集合,任取$\alpha \in A$,考虑集合$\alpha \cap A$,如果$\alpha \cap A = \varnothing$,则$\alpha$是$A$的最小元.否则$\alpha\cap A$有$\in$下的最小元$\beta$,$\beta$是$A$的最小元.
+
    
 
-3. 
+我们可以考虑所有序数所构成的类$\bold{On}$.
+
+定义$\bold{On}$为所有序数所构成的类,可以由前文所述的性质直接推知
+
+* 对序数定义$\beta < \alpha$当且仅当$\beta \in \alpha$,则这定义了序数类$\bold{On}$上的一个全序,并且对于任意的序数$\alpha$都有$\alpha = \{\beta:\beta<\alpha\}$
+* 若$C$是一个由序数所构成的类,$C\neq \varnothing$,则$\inf C \in C$.且不难得出$\alpha \sqcup \{\alpha\}>\alpha$.
 
 
 
-## 递归原理与超穷归纳法
+既然序数所构成的是一个类,那我们便可以讨论其是否可以纳入集合论中,即其是否能够构成集合亦或者它需要被放入真类之中.
+
+若有$\bold{On}$是一个集合,那么$\sup (\bold{On})$有定义,$\sup (\bold{On})+1$将大于所有序数,包括它自己.这与它是所有序数构成的矛盾.于是可以得知$\bold{On}$是一个真类.
+
+
+
+有了序数的概念,我们便可以试着使用序数来构建$\Z_{\geq 0}$.在此之前,我们先看一个番外($\text{Peano}$公理).
+
+> $\text{Peano}$从__不经定义__的"集合","自然数","后继者"与"属于"等概念出发.他关于自然数的五个公理是
+>
+> 1. $1$是一个自然数
+> 2. $1$不是任何其他自然数的后继者
+> 3. 每一个自然数$a$都有一个后继者
+> 4. 如果$a$与$b$的后继者相等,则$a$与$b$也相等
+> 5. 若一个由自然数组成的集合$S$中含有$1$,又若当$S$含有任一数$a$时,它一定也含有$a$的后继者,则$S$就含有全部的自然数.
+>
+> 这最后一条公理就是数学归纳法公理.
+>
+> 
+>
+> $\text{Peano}$采取关于相等的相反,对称和传递公理.
+>
+> * 这就是$a = a$;
+> * 若$a = b$,则$b = a$
+> * 若$a=b$,$b=c$则$a=c$
+>
+> 
+>
+> 他用如下的叙述来定义加法:对于每一对自然数$a$与$b$有唯一的和$a+b$存在,使
+> $$
+> a+1 &=& a+\\
+> a+(b+) &=& (a+b)+
+> $$
+> 同样地,他用如下的说法来定义乘法:对于每一对自然数$a$和$b$有唯一的积$a\cdot b$存在使
+> $$
+> a \cdot 1 &=& a\\
+> a\cdot(b+) &=& (a\cdot b)+a
+> $$
+> 他接着建立了自然数的所有人们熟悉的性质.
+
+不难发现$\text{Peano}$公理中也运用到了后继这个概念,但是他选择$1$作为最初的源头.不难发现我们实际操作整数时需要用到的全部特性即为$n \mapsto n+1$.这在序数中表示的是后继.
+
+但是除了$1$作为最初的源头以外,我们或许可以定义一个更为合理的源头,即$\varnothing$,用它作为$0$再合适不过.接着我们便可以根据前文提到的后继概念定义出$1,2,\cdots$,
+$$
+1:= 0+1, 2:=1+1,3:=2+1,\cdots
+$$
+现在,我们便可以定义最小的非零极限序数$\omega$,这样的序数如果存在则必然包含所有$0,1,2,\cdots$,而且确实由它们构成:回忆无穷公理$\bold{A.6}$中所定义出的归纳集的概念,若$x$是一个归纳集,取$\alpha :=\{y \in x: (y \subset x) \land (y\in \bold{On})\}$.
+
+依照定义直接验证以下性质
+
+1. $\varnothing \in \alpha$于是$\alpha$非空($\{\varnothing\}\neq \varnothing$)
+2. $\alpha$是序数($\alpha\in \bold{On}$)
+3. $y \in \alpha \Rightarrow y + 1 \in \alpha$于是$\alpha$确实为极限序数.
+
+不难发现我们所求的序数为$\omega :=\inf\{\text{非零极限序数}\}$.满足$n < \omega$的序数称为有限序数.
+
+## 递归原理
+
+#### 整数
+
+##### 群的定义
+
+ 对于集合$A$以及$A$上的代数运算$\cdot$
+对于$\cdot$若其满足结合律，即对于任意的$a,b,c \in A$有$(a\cdot b)\cdot c = a \cdot (b\cdot c)$并且对于任意的$a,b \in A$其满足$a \cdot b \in A$(封闭性，或称代数运算的良定义)，则其构成一个半群(semi-group)若对于半群$A$存在一个单位元(identity，也常常称为幺元)$e \in A$满足$\forall a \in A$都有$ea = a = ae$则称$A$为幺半群(monoid). 
+
+若对于幺半群$A$，其每个元素均可逆，即对于任意的$a \in A,\exists a^{-1} \in A$$\Rightarrow$ $aa^{-1} = a^{-1}a = e$则称$A$为一个群(Group).
+
+其定义可以简化为：
+对于给定资料$(A,\cdot)$,若其满足以下条件，我们将其称之为群:
+
+1. (封闭性)$\forall a,b \in A, a\cdot b \in A$ .
+
+2. (结合律)$\forall a,b,c \in A$，$(a\cdot b)\cdot c = a\cdot (b\cdot c)$.
+
+3. (左[右]单位元 $\exists e \in A$，$\forall a \in A ,ea = a$.
+
+4. (左[右]逆元) $\forall a \in A$，$\exists a^{-1} \in A, a^{-1}a = e$.
+
+##### 根据加法构造出$\Z$
+
+根据序数中番外部分的$\text{Peano}$公理,我们便定义出了自然数集$\N^* = \{1,2,\cdots\}$,考虑加法,由于加法满足结合律,这显然是一个半群,自然地,可以试着将其拓展为一个含幺半群$\N$,这需要加入一个单位元($\text{identity}$),若我们考虑$\forall a\in \N^*$,如何去定义一个元素$\text{e}$使得$a+\text{e} = a$呢?这时考虑$\text{Peano}$公理所延伸出来的$a + b = a+ \underset{b\text{个}}{\underbracket{1+1+1+\cdots+1}}$于是若存在一个单位元$\text{e}$,使得$a + \text{e} = a + \underset{\text{e个}}{\underbracket{1+\cdots+1}} = a$,自然而然的发现$\text{e}$个$1$为没有$1$,即$\text{e}$是"空的",类同于$\varnothing$,那么依据我们先前在序数上的定义便可以得到$0 := \varnothing$并将其扩充进入自然数集$\N^*$即得到$\Z_{\geq 0}$.
+
+不难发现对于任意的非负整数$a\in \N$,它们都可以写成$a$个$1$相加的形式.那么也可以将其写成$b$个$1$加上$c$个$1$的形式(即$b + c = a$,其中$c$是非负整数),即$b$与$a$之间相差$c$个$1$.那么我们如何用$a$和$c$来表示出$b$呢?
+
+可以定义一个有序偶$(a,c)$使得$(a,c) = b$,不难发现这个有序偶是一个代数运算$\N \times \N \to \Z$(注意,此处我们还没有定义出$\Z$的概念,此处的$\Z$只是一个未知的集合,接下来我们将逐步确定其中的元素)
+
+那么可以得到$(a,a) = 0$即$0 \in \Z$.接下来考虑$c > a$时,这个时候$b + c = a$的$b$就不一定是一个非负整数了,那么这个时候的$b$应当如何表示呢?
+
+先研究这个有序偶关于加法的性质:显然有$(a,b)+(c,d) = (a+c,b+d)$
+
+由于$c > a$于是$c$可以写成$a + d$的形式(即$a$个$1$加上$d$个$1$)其中$a$和$d$都是非负整数.那么有$(c,a+d) = 0$.又有$(a,c) = (a,a+d) = (a,a)+(0,d) = 0+(0,d) = 0$那么便得到此时的$b = (0,d)$由于$b = (b,0)$于是可以得到$(b,0) = (0,d)$进一步推出$0 = (b,b) = (0,d)+(0,b) = (0,b+d)$即$b+d = 0$由于$d$是一个非负整数于是$b$是其关于$0$的长为$d$个$1$的数,我们将其称为$d$的负元,不难发现每一个$a \in \N^*$都存在一个负元,这在群论中就是一个逆元($0$的逆元就是$0$),将正整数的负元称为负整数.
+
+不难发现这个代数运算$\N \times \N \to \Z$中,$\Z$包含了正整数,零以及负整数.其关于加法构成一个群,这也是最普遍的群.
+
+我们$\Z$中的数称为整数($\text{integer}$).
+
+#### 整数所满足的运算规律
+
+接着可以得到一些整数所满足的运算规律
+
+
 
 # 基数
 
 ## 引入
+
+### 正常引入
 
 我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$.
 
 不难发现$|A| \leq |B|$等价于$A$到$B$的某个子集之间存在一个单射.
 
 若集合$A$与$B$不对等,但集合$B$对等于集合$A$的某个子集,则称$A$的势大于$B$的势,或$B$的势小于$A$的势,记为$|A| > |B|$或$|B|<|A|$.
+
+### 序数引入
+
+引理($\text{Hartogs}$数) 对任意集合$X$,存在一个序数$H(X)$,$H(X)$不与$X$的任何子集等势,并且是具有如此性质的最小序数.$H(X)$称为$X$的$\text{Hartogs}$数
+
+[证明]
+
+令$W= \{w \subset X: w\text{上存在良序}\}$.不难发现$W$是$\mathcal{P}(X)$的子集,并且对于$X$的任意有穷集合都有其属于$W$.于是不难判断$W$为非空集合.又由于每一个良序集都存在唯一的序数与其同构,于是根据替换公理模式$\bold{A.7}$可以得到
+$$
+H(X) = \{\alpha : \text{存在}w\in W,\alpha\text{是与}w\text{同构的唯一序数}\}
+$$
+是序数的集合.
+
+若$\alpha \in H(X)$且$\beta<\alpha$则显然有$\beta \in H(X)$,故$H(X)$也是一个序数.但是$H(X)$不与$X$的任何子集等势,若等势则有$H(X)\in H(X)$即与正则公理矛盾.不难看出$H(X)$是有该性质的最小序数.$\Box$
+
+
+
+不难发现对于任意集合$X$,$H(X)$即为$X$中的元素个数,将$H(X)$翻译为自然数(或无穷基数)即可发现其就是基数.
+
+
+
+定义(基数) 序数$\kappa$被称为基数,如果对任意序数$\lambda < \kappa$都有$|\lambda| < |\kappa|$
+
+对于任意集合$X$,可以取其最小的序数$\alpha (X)$使得$|X| = |\alpha(X)|$.则$X \mapsto \alpha(X)$给出等势类与基数的一一对应.
+
+### 可列
 
 凡是与自然数集对等的集合称为可数集,这时我们认为其基数为$\aleph_0$(叫做阿列夫-0).易见,$A$为可数集的充要条件是$A$的元可以排列成无穷序列的形式
 $$
@@ -592,7 +809,7 @@ $$
 
 接下来考虑有理数集$\Q$的幂集$\mathcal{P}(\Q)$,根据有理数的稠密性(也可以使用$\text{Dedekind}$分割得到)可以得知存在一个映射$\R \hookrightarrow \mathcal{P}(\Q)$(即对于任意一个实数$r$将其映射到$\{x\in \Q: x<r\}$,根据有理数的稠密性得到对于任意实数$r_1$,$r_2$之间至少会存在一个有理数$x$,这就保证了其为一个单射),于是得到$|\R| \leq \mathcal{P}(\Q) = 2^{\aleph_0}$.
 
-考虑$[0,1]$区间与$\text{Cantor}$三分集
+考虑$[0,1]$区间与$\text{Cantor}$三分集(后文会进行构造)
 $$
 C:= \left\{\sum_{n=1}^\infty a_n 3^{-n}: \forall n , a_n = 0\text{或} 2 \right\}
 $$
@@ -603,6 +820,8 @@ $$
 由于$\aleph_0$是最小的无穷基数(具体参见无穷序数$\omega$的推理),不难发现$2^{\aleph_0}>\aleph_0$于是得到$2^{\aleph_0}$是一个比$\aleph_0$大的无穷基数,这也意味着我们可以构建一些比$\aleph_0$更大的无穷基数.我们将比$\aleph_0$大但是比其他无穷基数小的无穷基数记为$\aleph_1$同理推广出$\aleph_2$,$\aleph_3$等.
 
 不难发现$\aleph_1 \leq 2^{\aleph_0}$,但是我们一直无法构建出一个比$2^{\aleph_0}$含有更少基数的集合使其大于$\aleph_0$于是$\text{Cantor}$做了一个假设即$\aleph_1 = 2^{\aleph_0}$,将其称为连续统假设($\text{continuum hypothesis}$).但是当时无论$\text{Cantor}$无论如何努力,都无法证明其是否成立.在$1900$年的国际数学会议上,$\text{Hilbert}$将这个问题列入了著名的$23$问中.但是$\text{Godel}$通过他的不完备性定理认为$\text{Cantor}$的连续统假设不可证明.(为了不爆掉读者的脑袋,在此对于不完备性定理不进行赘述)
+
+
 
 
 
@@ -1192,3 +1411,12 @@ f^{-1}(\mathfrak{N}) \ni f^{-1}(A\cap B) &=& f^{-1}(A)\cap f^{-1}(B)
 $$
  同理证$\Delta$即可.
 
+# 距离空间中的拓扑概念,拓扑空间
+
+# 连续性,逼近定理
+
+# $\R^n$中开集,闭集的构造以及$\text{Cantor}$集的构造
+
+# 结语
+
+(你以为我在没写完内容之前会写结语?)
