--- a/预备知识.md
+++ b/预备知识.md
@@ -293,7 +293,7 @@ $$
 
 ## 映射
 
-### 二元关系与多元关系以及代数运算
+### 二元关系与多元关系
 
 关系($\text{Relation}$)是指两个或两个以上的事物(事物可以是自己)之间的联系.在集合论中,最简单的关系是两个集合$A,B$之间的关系,我们将其称为二元关系,它可以看作一种对应($\text{correspondence}$).可以将其视为一个有序偶$(a,b)$其中$a\in A,b \in B$(从前文的积集可以得到严格定义,在配对公理$\bold{A.2}$中对其存在性进行了探讨),即当出现第一个元素$a$时,我们根据有序偶得到第二个元素$b$.于是,关系的核心在于有序偶,关系其实就是有序偶所构成的一个集合.
 
@@ -318,19 +318,16 @@ $$
    R(X)=\text{Im}(X) = \{y \in \text{R}(R) : \exists x\in X(R(x,y))\}
    $$
    
-
 2. 集合$Y$在关系$R$下的逆像定义为
    $$
    R^{-1}(Y) = \{x\in \text{Dom}(R) : \exists y \in Y(R(x,y))\}
    $$
    
-
 3. 二元关系$R$的逆定义为
    $$
    R^{-1} = \{(x,y): (y,x) \in R\}
    $$
    
-
 4. 二元关系$R$和$S$的复合定义为
    $$
    S \circ R = \{(x,z): \exists y((x,y)\in R \land(y,z)\in S)\}
@@ -338,6 +335,8 @@ $$
    
 
 不难发现二元关系对应的是二元$\text{Cartesian}$积,若我们将其推广到多元自然也可以得到多元关系,这部分请读着自行推导.
+
+
 
 ### 映射
 
@@ -625,9 +624,9 @@ $$
 
 不难发现我们所求的序数为$\omega :=\inf\{\text{非零极限序数}\}$.满足$n < \omega$的序数称为有限序数.
 
-## 递归原理
+## 递归原理与数列构造
 
-#### 整数
+#### 整数的推演
 
 ##### 群的定义
 
@@ -649,25 +648,146 @@ $$
 
 ##### 根据加法构造出$\Z$
 
-根据序数中番外部分的$\text{Peano}$公理,我们便定义出了自然数集$\N^* = \{1,2,\cdots\}$,考虑加法,由于加法满足结合律,这显然是一个半群,自然地,可以试着将其拓展为一个含幺半群$\N$,这需要加入一个单位元($\text{identity}$),若我们考虑$\forall a\in \N^*$,如何去定义一个元素$\text{e}$使得$a+\text{e} = a$呢?这时考虑$\text{Peano}$公理所延伸出来的$a + b = a+ \underset{b\text{个}}{\underbracket{1+1+1+\cdots+1}}$于是若存在一个单位元$\text{e}$,使得$a + \text{e} = a + \underset{\text{e个}}{\underbracket{1+\cdots+1}} = a$,自然而然的发现$\text{e}$个$1$为没有$1$,即$\text{e}$是"空的",类同于$\varnothing$,那么依据我们先前在序数上的定义便可以得到$0 := \varnothing$并将其扩充进入自然数集$\N^*$即得到$\Z_{\geq 0}$.
+根据序数中番外部分的$\text{Peano}$公理,我们便定义出了自然数集$\Z_{\geq 1} = \{1,2,\cdots\}$,考虑加法,由于加法满足结合律,这显然是一个半群,自然地,可以试着将其拓展为一个含幺半群$\N$,这需要加入一个单位元($\text{identity}$),若我们考虑$\forall a\in \Z_{\geq 1}$,如何去定义一个元素$\text{e}$使得$a+\text{e} = a$呢?这时考虑$\text{Peano}$公理所延伸出来的$a + b = a+ \underset{b\text{个}}{\underbracket{1+1+1+\cdots+1}}$于是若存在一个单位元$\text{e}$,使得$a + \text{e} = a + \underset{\text{e个}}{\underbracket{1+\cdots+1}} = a$,自然而然的发现$\text{e}$个$1$为没有$1$,即$\text{e}$是"空的",类同于$\varnothing$,那么依据我们先前在序数上的定义便可以得到$0 := \varnothing$并将其扩充进入自然数集$\Z_{\geq 1}$即得到$\Z_{\geq 0}$.
 
-不难发现对于任意的非负整数$a\in \N$,它们都可以写成$a$个$1$相加的形式.那么也可以将其写成$b$个$1$加上$c$个$1$的形式(即$b + c = a$,其中$c$是非负整数),即$b$与$a$之间相差$c$个$1$.那么我们如何用$a$和$c$来表示出$b$呢?
+不难发现对于任意的非负整数$a\in \Z_{\geq 0}$,它们都可以写成$a$个$1$相加的形式.那么也可以将其写成$b$个$1$加上$c$个$1$的形式(即$b + c = a$,其中$c$是非负整数),即$b$与$a$之间相差$c$个$1$.那么我们如何用$a$和$c$来表示出$b$呢?
 
-可以定义一个有序偶$(a,c)$使得$(a,c) = b$,不难发现这个有序偶是一个代数运算$\N \times \N \to \Z$(注意,此处我们还没有定义出$\Z$的概念,此处的$\Z$只是一个未知的集合,接下来我们将逐步确定其中的元素)
+可以定义一个有序偶$(a,c)$使得$(a,c) = b$,不难发现这个有序偶是一个代数运算$\Z_{\geq 0} \times \Z_{\geq 0} \to \Z$(注意,此处我们还没有定义出$\Z$的概念,此处的$\Z$只是一个未知的集合,接下来我们将逐步确定其中的元素)
 
 那么可以得到$(a,a) = 0$即$0 \in \Z$.接下来考虑$c > a$时,这个时候$b + c = a$的$b$就不一定是一个非负整数了,那么这个时候的$b$应当如何表示呢?
 
 先研究这个有序偶关于加法的性质:显然有$(a,b)+(c,d) = (a+c,b+d)$
 
-由于$c > a$于是$c$可以写成$a + d$的形式(即$a$个$1$加上$d$个$1$)其中$a$和$d$都是非负整数.那么有$(c,a+d) = 0$.又有$(a,c) = (a,a+d) = (a,a)+(0,d) = 0+(0,d) = 0$那么便得到此时的$b = (0,d)$由于$b = (b,0)$于是可以得到$(b,0) = (0,d)$进一步推出$0 = (b,b) = (0,d)+(0,b) = (0,b+d)$即$b+d = 0$由于$d$是一个非负整数于是$b$是其关于$0$的长为$d$个$1$的数,我们将其称为$d$的负元,不难发现每一个$a \in \N^*$都存在一个负元,这在群论中就是一个逆元($0$的逆元就是$0$),将正整数的负元称为负整数.
+由于$c > a$于是$c$可以写成$a + d$的形式(即$a$个$1$加上$d$个$1$)其中$a$和$d$都是非负整数.那么有$(c,a+d) = 0$.又有$(a,c) = (a,a+d) = (a,a)+(0,d) = 0+(0,d) = 0$那么便得到此时的$b = (0,d)$由于$b = (b,0)$于是可以得到$(b,0) = (0,d)$进一步推出$0 = (b,b) = (0,d)+(0,b) = (0,b+d)$即$b+d = 0$由于$d$是一个非负整数于是$b$是其关于$0$的长为$d$个$1$的数,我们将其称为$d$的负元,不难发现每一个$a \in \Z_{\geq 1}$都存在一个负元,这在群论中就是一个逆元($0$的逆元就是$0$),将正整数的负元称为负整数.
 
-不难发现这个代数运算$\N \times \N \to \Z$中,$\Z$包含了正整数,零以及负整数.其关于加法构成一个群,这也是最普遍的群.
+记$a - b = (a,b)$,即为减法,在下文也会进行一次定义.
+
+不难发现这个代数运算$\Z_{\geq 0} \times \Z_{\geq 0} \to \Z$中,$\Z$包含了正整数,零以及负整数.其关于加法构成一个群,这也是最普遍的群.
 
 我们$\Z$中的数称为整数($\text{integer}$).
 
 #### 整数所满足的运算规律
 
-接着可以得到一些整数所满足的运算规律
+接着可以得到一些整数所满足的运算规律(考虑加法以及乘法,这里实际上是当成了整数环进行研究),接下来设$a,b,c \in \Z$
+$$
+\begin{eqnarray*}
+(a+b)+c = a+(b+c) &\text{以及}& (ab)c = a(bc) (\text{associative laws(结合律)})\\
+a+b = b+a &\text{以及}& ab =ba(\text{commutative laws(交换律)})\\
+a(b+c) = ab+ac&\text{以及}& (a+b)c = ac+bc(\text{distrivutive laws(分配律)})\\
+a+0 = a &\text{以及}& a1 = a(\text{identity elements(单位元)})
+\end{eqnarray*}
+$$
+对于每个$a \in \Z$都存在$-a \in \Z$使得$(-a) + a = 0$($\text{additive inverse}(加法逆元)$)
+
+我们记$a-b = a+(-b)$
+
+此外还有一些运算规律
+$$
+\begin{eqnarray*}
+ab = 0 \Leftrightarrow a=0 \text{或}b=0\\
+a< b \Rightarrow a+c<b+c\text{对于所有的}c \in \Z\\
+a<b \Rightarrow ad<bd \text{对于所有的}d \in \Z_{\geq 1}
+\end{eqnarray*}
+$$
+
+### 数学归纳法原理(Principle of Mathematical Induction)
+
+如果$S$是一个$\Z_{\geq 0}$的子集有$0 \in S$并且满足
+
+1. $ \text{对于所有的}n \in \Z_{\geq 0},n\in S\Rightarrow n+1 \in S $
+
+   或
+
+2. $\text{对于所有的}0 \leq m < n\text{都有} m \in S  \Rightarrow n \in S $
+
+就得到$S = \Z_{\geq 0}$
+
+[证明]
+
+若$\Z_{\geq 0}\setminus S \neq \varnothing$,令$n \neq 0$为其极小元.接着对于所有的$m<n$均有$m \notin \Z_{\geq 0}\setminus S$即$m \in S$.
+
+不难根据$1$和$2$推知$n \in S$于是有$\Z_{\geq 0}\setminus S = \varnothing$即$\Z_{\geq 0} = S$$\Box$
+
+这就是我们熟知的数学归纳法的数学依据.
+
+### 递归原理与数列
+
+接下来,为了得到数列的合法性,我们需要一个定理
+
+(递归原理) 若$S$是一个集合,有$a\in S$并且对于任意的$n \in \Z_{\geq 0}$有$f_n:S \to S$是一个函数,接着有一个唯一的函数$\varphi :\Z_{\geq 0} \to S$满足$\varphi (0) = a$并且对于任意的$n \in \Z_{\geq 0}$有$\varphi(n+1) = f_n(\varphi(n))$
+
+[证明]
+
+如果$\varphi$存在,那么由于映射本质上也是一个二元关系,我们可以构建一个关系$R \subset \Z_{\geq 0}\times S$
+$$
+R = \{(n,\varphi(n): n \in \Z_{\geq 0}\}
+$$
+需要证明这个关系$R$确实可以构造(由于$\varphi$是一个函数,并且$\varphi(n+1) = f_n(\varphi(n))$我们需要将$R$这个集合用所有满足该性质的所有其他关系构造出来,对于$R$得到一个具体的认识):
+
+对于$\text{Cartesian}$积$\Z_{\geq 0}\times S$可以构建一个$Y \subset \Z_{\geq 0}\times S$使得
+$$
+((0,a)\in Y) \land (\text{对与所有的}n \in \Z_{\geq 0},(n,x)\in Y \Rightarrow (n+1,f_n(x))\in Y)
+$$
+不难发现对于任意的$Y$都有$R \subset Y$.
+
+不难发现最大的$Y$是对于任意的$s \in S$都有$x$使得$x = s$(即$(n,s)\in  Y$对于任意的$s$都成立)
+
+构建$\mathcal{G}$为所有的$Y$所构成的集合.不难得到$R = \bigcap_{Y \in \mathcal{G}}Y \in \mathcal{G}$
+
+接着,若$\varphi$存在,那么$R$需要满足映射的定义,即:对于任意的$n \in \Z_{\geq 0}$都可以构成唯一的以$n$为第一个元素的$R$中的有序偶.(即$(n,s)$在$R$中是唯一确定的,不存在$s_1,s_2$使得$s_1 \neq s_2$且$((n,s_1)\in R)\land((n,s_2)\in R)$ )
+
+接下来我们围绕映射的定义进行展开.
+
+令$M$是一个$\Z_{\geq 0}$的子集并且有所有的存在唯一的$x_n \in S$满足$(n,x_n)\in R$的$n \in \Z_{\geq 0}$构成(即满足映射定义的$n$).
+
+接着我们需要证明$M = \Z_{\geq 0}$
+
+不难发现这可以使用数学归纳法进行证明
+
+1. 若$0 \notin M$则存在$(0,b)\in R$并且有$b \neq a$,我们便可以得到$R\setminus \{(0,b)\}\subset N \times S$并且不难发现$R\setminus \{(0,b)\}$满足集合$Y$的条件,即$R \setminus \{(0,b)\} \in \mathcal{G}$于是有$R \subset R\setminus \{(0,b)\}$造成矛盾,于是$0 \in M$
+2. 若$n+1 \notin M$但是有$n \in M$.那么就存在一个$(n+1,c)\in R$并且$c \neq f_n(x_n)$.仿照前文的证明可以得到其与$\mathcal{G}\ni R\subset R \setminus \{(n+1,c)\}\in \mathcal{G}$这就造成了矛盾.于是$n+1 \in M$若$n \in M$对于任意的$n \in \Z_{\geq 1}$成立
+
+由前文提到的数学归纳法原则可知$M = \Z_{\geq 0}$
+
+于是$n \mapsto x_n$定义了一个函数$\varphi$并且$\varphi :\Z_{\geq 0}\to S$依照关系$R$.由于$(0,a)\in R$我们有$\varphi(0) = a$
+
+对于任意的$n \in \Z_{\geq 0}$有$(n,x_n) = (n,\varphi(n))\in R$并且由于$R \in \mathcal{G}$有$(n+1,f_n(\varphi(n)))\in R$由于$R$满足映射所具备的特性,于是得到$(n+1,x_n)\in R$是唯一的,即$x_{n+1} = f_n(\varphi(n))$于是得到$\varphi$是唯一的.
+
+$\Box$
+
+令$A$是一个非空集合,$A$上的数列(序列,$\text{sequence}$)便是一个函数$\Z_{\geq 0}\to A$.一个数列经常用$\{a_0,a_1,\cdots\}$或$\{a_i\}_{i \in \Z_{\geq 0}}$或$\{a_i\}$来表示,其中$a_i \in A$是$i\in \Z_{\geq 0}$的像.这便是数列的来源及其依据.
+
+## 超穷递归原理
+
+由于在序数中真类$\bold{On}$也对$\leq$具有良序性质:任何由序数构成的类都有极小元.这便立即导出以下结果
+
+定理(超穷归纳法) 令$C$为一个由序数构成的类.假设
+
+1. $0\in C$
+2. $\alpha \in C \Rightarrow \alpha+1 \in C$
+3. 设$\alpha$为极限序数,若对每个$\beta < \alpha$有$\beta \in C$则$\alpha \in C$
+
+那么有$C = \bold{On}$.如果仅考虑某个小于$\theta$的序数而非$\bold{On}$整体,断言依然成立
+
+[证明]
+
+使用反证法,取不在$C$中的最小序数$\alpha \neq 0$则若它是后继序数,则$\alpha \in C$若它是极限序数同样有$\alpha \in C$$\Box$
+
+不难发现超穷归纳法与普通的数学归纳法的区别在于它同时包含了数学归纳法所需要的两个条件(由于是序数,条件2为非极限序数的情况,条件3为极限序数的情况)
+
+
+
+上述定理常常用来递归地构建一列以序数枚举的数学对象,它基于某规则$G$如下:
+
+* 第零项 $a_0 = G(0)$给定
+* 后继项 设$\alpha = \beta+1$已知$a_\beta$则可以确定$a_\alpha = a_{\beta+1} = G(a_\beta)$
+* 极限项 设$\alpha$为极限序数,已知$\{a_\beta: \beta<\alpha\}$则可以确定$a_\alpha = G(\{a_\beta:\beta<\alpha\})$
+
+不难想象这将唯一确定一列集合$a_\alpha$.
+
+考虑函数$G : \bold{V} \to \bold{V}$,虽然$\bold{V}$是真类,但是$G$可以阐释为一阶逻辑的某类公式(一阶逻辑是通用的,比如说$(a\in C)\Leftrightarrow(a\in A)\land(a\in B)$这就是一阶公式)从而我们可以引入$\theta$-列的概念:这是指函数$a : \theta \to \bold{V}$亦可理解为形如$\{a_\alpha : \alpha < \theta\}$的列
+
+定理(超穷递归原理) 对任意序数$\theta$,存在唯一的$\theta$-列$a$使得$\alpha < \theta \Rightarrow a(\alpha) = G(a\mid_{\alpha})$.特别地,存在唯一的函数$a : \bold{On} \to \bold{V}$使得对每个序数$\alpha$皆有$a(\alpha) = G(a\mid_{\alpha})$.
 
 
 
@@ -839,7 +959,7 @@ $$
 
 # $\R^1$中的序列与子集的一些基本概念和性质
 
-这部分是实分析中最为常用的关于集合部分的内容.
+这部分是实分析中最为常用的关于集合部分的内容.关于数列合法性的定义我们已经在序数部分讨论过.
 
 ## 敛散性与$\text{Cauchy}$收敛准则
 
