--- a/预备知识.md
+++ b/预备知识.md
@@ -759,6 +759,8 @@ $\Box$
 
 ## 超穷递归原理
 
+### 超穷归纳法与超穷递归原理
+
 由于在序数中真类$\bold{On}$也对$\leq$具有良序性质:任何由序数构成的类都有极小元.这便立即导出以下结果
 
 定理(超穷归纳法) 令$C$为一个由序数构成的类.假设
@@ -788,6 +790,79 @@ $\Box$
 考虑函数$G : \bold{V} \to \bold{V}$,虽然$\bold{V}$是真类,但是$G$可以阐释为一阶逻辑的某类公式(一阶逻辑是通用的,比如说$(a\in C)\Leftrightarrow(a\in A)\land(a\in B)$这就是一阶公式)从而我们可以引入$\theta$-列的概念:这是指函数$a : \theta \to \bold{V}$亦可理解为形如$\{a_\alpha : \alpha < \theta\}$的列
 
 定理(超穷递归原理) 对任意序数$\theta$,存在唯一的$\theta$-列$a$使得$\alpha < \theta \Rightarrow a(\alpha) = G(a\mid_{\alpha})$.特别地,存在唯一的函数$a : \bold{On} \to \bold{V}$使得对每个序数$\alpha$皆有$a(\alpha) = G(a\mid_{\alpha})$.
+
+[证明]
+
+1. 若$\theta$-列$a$和$a'$均满足所示性质.我们断言$\alpha < \theta$蕴涵$a(\alpha) = a'(\alpha)$则有$a = a'$.这对于$a = 0$是已知的.使用超穷归纳法进行下一步证明,假设这对于所有的$\beta < \alpha$成立,则$a\mid_{\alpha}= a'\mid_{\alpha}$于是得到$a(\alpha) = a'(\alpha)$.
+2. 第二步是$\theta$-列$a$的存在性.当$\theta = 0$时显然.现在设$\theta >0$,并且对于任意的$\xi <\theta$所成的$a[\xi]$都存在,则由替换公理可知$a[\xi]$确实是集合间的映射.由$1$可以将$a[\xi]$转变为拼接在$\theta$上的函数$a$使得$a\mid_\xi = a[\xi]$而且使性质$\alpha <\theta \Rightarrow a(\alpha) = G(a\mid_\alpha)$成立,这是容易的.
+
+最后,由于$\bold{On}$无极大元,于是可以根据前两步唯一的定义$a : \bold{On} \to \bold{V}$$\Box$
+
+几点说明:
+
+1. 替换公理模式$\bold{A.7}$保证了函数限制$a\mid_{\alpha}$可以按照寻常方法等同于集合$\{(\beta,a(\beta)):\beta \in  \alpha\}$(即存在一个集合$a\mid_{\alpha} = \{a[\beta]:\beta\in\alpha\}$),故$G$可以对其取值
+2. 我们将函数限制在$0$理解为空集$\varnothing$故按照定义有$a(0) = G(0)$
+3. 定理前半段只要求$G$对形如$\alpha \to \bold{V}$的函数有定义,其中$\alpha < \theta$
+
+借助超穷递归原理,我们可以对于序数定义类似于非负整数运算如次.以下在情形$(c)$总是假设$\beta$为极限序数
+
+1. 加法:$(a)$ $a\mid_0 =\alpha + 0 := \alpha$,$(b)$ $ \alpha + (\beta + 1) = (\alpha+\beta)+1$,$(c)$$\alpha + \beta = \sup\{\alpha + \xi : \xi <\beta\}$
+2. 乘法:$(a)$$a\mid_0 = \alpha \cdot 0 := 0$,$(b) \alpha \cdot (\beta +1) = \alpha \cdot \beta + \alpha$,$(c)$ $\alpha \cdot \beta = \sup\{\alpha \cdot \xi : \xi < \beta\}$
+3. 指数:$(a)$$a\mid_0 = \alpha^0 :=1$,$(b) \alpha^{\beta+1} =\alpha^\beta \cdot \alpha$,$(c)$$\alpha^\beta = \sup\{\alpha^\xi : \xi < \beta\}$
+
+
+
+### 应用
+
+__命题__: 对于任意良序集$P$，存在唯一的序数$\alpha$和良序集之间的同构$\phi : P\xrightarrow{\sim}\alpha$(该命题保证了基数部分$\text{Hartgos}$数的存在性)
+
+[证明] 
+
+设$P \neq \varnothing$并且选取$\mho\notin P$(不难验证其存在性).接下来使用超穷递归定义一族元素$a_{\alpha}\in P\sqcup \mho$，其中$\alpha$取遍所有序数，设$a_0 := \min(P)$,并递归地定义
+$$
+a_{\alpha}:=
+\left\{\begin{array}{c}
+\min(P\setminus\{a_{\beta}:\beta<\alpha\}), &\{a_\beta :\beta<\alpha\}\subsetneq P  \\
+\mho,& \{a_\beta:\beta<\alpha\}=P\\
+\end{array}\right.
+$$
+ 由于$P$是集合，必然存在最小的序数$\theta$使得$a_\theta = \mho$，否则这将蕴涵单射$a:\bold{On} \to P$.分离公理模式确保$a(\bold{On})\subset P$是集合，而替换公理模式蕴涵$\bold{On} = a^{-1}a(\bold{On})$亦是集合，由于$\bold{On}$是真类，造成矛盾，于是得到$a_{\alpha} \mapsto \alpha$定义了一个偏序集的同构$P \to \{\beta:\beta<\theta\}=\theta$.$\Box$
+
+
+
+$\text{Zermelo}$良序定理:任意集合$S$都能够被赋予良序
+
+[证明]
+
+选取元素$\mho \notin S$由选择公理可以在$S$的每个子集$S'$中挑选元素$g(S')$设$a_0 := g(S)$,并且使用超穷递归对于每个序数$\alpha$定义
+$$
+a_\alpha := 
+\left\{
+\begin{array}{c}
+g(S\setminus \{a_\beta:\beta< \alpha\}, & S\neq \{a_\beta:\beta<\alpha\}\\
+\mho , &S =  \{a_\beta:\beta < \alpha\}\\
+\end{array}
+\right.
+$$
+由于$S$是集合,于是可以取极小的$\theta$使得$a_\theta = \mho$,$S= \{a_\beta : \beta < \theta\}$后者和序数$\theta = \{\beta : \beta < \theta\}$之间有着显然的双射,再由命题得知$S$可以赋予良序.$\Box$
+
+
+
+$\text{Zorn}$引理: 设$P$为非空偏序集,而且$P$中每个链都有上界,则$P$含有极大元.
+
+[证明]
+
+假定$P$不含有极大元.任取$a_0 \in P$使用超穷递归法对于序数$\alpha$定义$a_\alpha \in P$使得$\alpha < \beta \Rightarrow a_\alpha <a_\beta$:设对每个$\beta<\alpha$都定义了$a_\beta$如上,则$(a_\beta)_{\beta<\alpha}$在$P$中自成一链.
+
+若$\alpha$是极限序数,则此链必有上界$a_\alpha \neq \{a_\beta\}_{\beta < \alpha}$.(上界也属于$P$,即极限序数也嵌入于$P$)
+
+若$\alpha = \gamma +1$是后继序数,因$P$无极大元可以得到$a_\alpha \in P$使得$a_\alpha > a_\gamma$.
+
+于是可以将真类$\bold{On}$嵌入$P$得到$\bold{On}$为集合,矛盾.
+
+于是得到$P$必然有最大元.$\Box$
+
+
 
 
 
