--- a/预备知识.md
+++ b/预备知识.md
@@ -983,7 +983,11 @@ $$
 
 接下来我们考虑$[0,1]$和$\N$,即验证$[0,1]$是不可数集.
 
-我们依旧采用$\text{Cantor}$的证明方法(因为过于经典),我们先假定$0$与$1$之间的实数是可列的.那我们把每一个这样的实数写成无穷小数($1$写成$0.9999\cdots$,$\frac{1}{2}$写成$0.4999\cdots$等).假如它们是可列的,那么我们可以对于每一个$\N$中的正整数$n$指定一个实数,即
+我们依旧采用$\text{Cantor}$的证明方法(因为过于经典)作为证法$1$
+
+[证明]
+
+我们先假定$0$与$1$之间的实数是可列的.那我们把每一个这样的实数写成无穷小数($1$写成$0.9999\cdots$,$\frac{1}{2}$写成$0.4999\cdots$等).假如它们是可列的,那么我们可以对于每一个$\N$中的正整数$n$指定一个实数,即
 $$
 \begin{eqnarray*}
 1 &\leftrightarrow& 0.a_{11}a_{12}a_{13}\cdots \\
@@ -992,11 +996,43 @@ $$
 \vdots
 \end{eqnarray*}
 $$
-于是我们可以定义某个在$0$与$1$之间的实数如下:令$b = 0.b_1b_2b_3\cdots$,观察上式对角线上的元素,若$a_{kk} = 1$则$b_k = 9$,若$a_{kk} \neq 1$则$b_k = 1$于是不难发现由于其任意一个元素都无法再上式中找到对应,有其不属于上表中所列的任何一个实数,即$\N$到$[0,1]$的映射只能是一个单射.即$|\N| < |[0,1]|$
+于是我们可以定义某个在$0$与$1$之间的实数如下:令$b = 0.b_1b_2b_3\cdots$,观察上式对角线上的元素,若$a_{kk} = 1$则$b_k = 9$,若$a_{kk} \neq 1$则$b_k = 1$于是不难发现由于其任意一个元素都无法再上式中找到对应,有其不属于上表中所列的任何一个实数,即$\N$到$[0,1]$的映射只能是一个单射.即$|\N| < |[0,1]| = |\R|$
+
+由于$|\R| = |[0,1]|$于是可以得到$|\R| > \aleph_0$.$\Box$
+
+接下来介绍证法$2$,使用$\text{Heine - Borel}$有限覆盖定理证明$\R$是不可数的
+
+[证明]
+
+使用反证法,设$\R$是可数集,即
+$$
+\R= \{x_1,x_2,\cdots,x_n,\cdots\}
+$$
+对于每个$x_n$均可做一个包含$x_n$的开区间$G_n = (a_n,b_n)$,$a_n<x_n < b_n$于是
+$$
+\R= \bigcup_{n = 1}^\infty G_n
+$$
+在$\R$上任取有限闭区间$[a,b]$,则有
+$$
+[a,b]\subset \bigcup_{n = 1}^\infty G_n
+$$
+接着使用$\text{Hein-Borel}$有限覆盖定理可以从$\{G_n\}$中选出有限个开区间,使得
+$$
+[a,b]\subset \bigcup_{k = 1}^m G_k,\text{于是},b-a \leq \sum_{k = 1}^m(b_k - a_k)
+$$
+另一方面,对$\forall \varepsilon >0$使得$0<\varepsilon < b-a$.取$G_k$是以$x_k$为中心,长为$\frac{\varepsilon}{2^k}$的开区间
+$$
+G_k = (a_k,b_k),a_k = x_k - \frac{\varepsilon}{2^{k+1}},b_k =  x_k + \frac{\varepsilon}{2^{k+1}}
+$$
+于是有
+$$
+\sum_{k = 1}^\infty (b_k - a_k)= \sum_{k = 1}^\infty \frac{\varepsilon}{2^k}= \varepsilon < b - a
+$$
+这与前文中$b - a \leq \sum_{k = 1}^m(b_k - a_k)$矛盾,于是$\R$不可数.$\Box$
+
+从证法$2$中还可以得出:若$A$是$\R$的可数子集,则对$\forall \varepsilon >0$,存在开区间族$\{(a_k,b_k)\}_{k = 1}^\infty$使得$A \subset \bigcup_{k = 1}^\infty (a_k,b_k)$而且$\sum_{k = 1}^\infty (b_k - a_k)\leq \varepsilon$
 
 
-
-由于$|\R| = |[0,1]|$于是可以得到$|\R| > \aleph_0$.
 
 
 
@@ -1014,7 +1050,7 @@ $$
 $$
 由于$\aleph_0$是最小的无穷基数(具体参见无穷序数$\omega$的推理),不难发现$2^{\aleph_0}>\aleph_0$于是得到$2^{\aleph_0}$是一个比$\aleph_0$大的无穷基数,这也意味着我们可以构建一些比$\aleph_0$更大的无穷基数.我们将比$\aleph_0$大但是比其他无穷基数小的无穷基数记为$\aleph_1$同理推广出$\aleph_2$,$\aleph_3$等.
 
-不难发现$\aleph_1 \leq 2^{\aleph_0}$,但是我们一直无法构建出一个比$2^{\aleph_0}$含有更少基数的集合使其大于$\aleph_0$于是$\text{Cantor}$做了一个假设即$\aleph_1 = 2^{\aleph_0}$,将其称为连续统假设($\text{continuum hypothesis}$).但是当时无论$\text{Cantor}$无论如何努力,都无法证明其是否成立.在$1900$年的国际数学会议上,$\text{Hilbert}$将这个问题列入了著名的$23$问中.但是$\text{Godel}$通过他的不完备性定理认为$\text{Cantor}$的连续统假设不可证明.(为了不爆掉读者的脑袋,在此对于不完备性定理不进行赘述)
+不难发现$\aleph_1 \leq 2^{\aleph_0}$,但是我们一直无法构建出一个比$2^{\aleph_0}$含有更少基数的集合使其大于$\aleph_0$于是$\text{Cantor}$做了一个假设即$\aleph_1 = 2^{\aleph_0}$,将其称为连续统假设($\text{continuum hypothesis}$,简记为$\text{CH}$).但是当时无论$\text{Cantor}$无论如何努力,都无法证明其是否成立.在$1900$年的国际数学会议上,$\text{Hilbert}$将这个问题列入了著名的$23$问中.但是$\text{G}\ddot{\text{o}}\text{del}$通过他的不完备性定理认为$\text{Cantor}$的连续统假设不可证明.(为了不爆掉读者的脑袋,在此对于不完备性定理不进行赘述), $1963$年$\text{Cohn}$证明$\text{CH}$是独立于集合论的$\text{ZFC}$公理系统的.
 
 
 
@@ -1030,7 +1066,173 @@ $$
 
    根据先前所述,得到$f:A_1 \hookrightarrow A_2,g:A_2 \hookrightarrow A_3$于是可以得到$g \circ f:A_1 \hookrightarrow A_3$于是得到$|A_1|\leq |A_3|$
 
-3. 
+3. ($\text{Cantor-Bernstein}$定理)设$|A| \leq |B|$且$|B|\leq |A|$则$|A|= |B|$
+
+   [证明]
+
+   考虑单射$f :  A \to B$和$g : B \to A$.我们可以断言以$g(B)$代替$B$,从而化约到$B \subset A$而$g$是包含映射的情况,即$f(A) \subset B \subset A$.令$A_0 := A,B_0:= B$,我们递归地对所有$n \in \Z_{\geq 0}$定义
+   $$
+   \begin{eqnarray*}
+   A_{n+1}&:=& f(A_n)\\
+   B_{n+1}&:= & g(B_n)
+   \end{eqnarray*}
+   $$
+   从而得到一列嵌套的子集
+   $$
+   \underset{\text{=A}}{\underbracket{A_0}}\supset\underset{\text{=B}}{\underbracket{B_0}}\supset \cdots \supset A_n \supset B_n \supset A_{n+1}\supset \cdots
+   $$
+   定义映射$\phi : A\to B$如下
+   $$
+   \phi(x) = \left\{
+   \begin{array}{c}
+   f(x) , &&\text{如果}\exists n \geq 0, x\in A_n \setminus B_n\\
+   x,&&\text{其他情况}\\
+   \end{array}
+   \right.
+   $$
+
+   接着验证$\phi$是双射
+
+   1. 对于任意的$x \in A$若对于任意$n \geq 0$都有$x \notin A_n \setminus B_n$则有$x \in g(B)$唯一.若$\exist n \geq 0,x \in A_n \setminus B_n$则由于$f(x)$是映射,于是有$f(x)$也是唯一的.且$f(x)\in B$.即$\phi$确实构成映射,并且为单射.
+
+   2. 对于任意的$y \in g(B)$有$\forall n \geq 0 , y \notin B_n \setminus A_{n+1}$或$\exists n \geq 0 , y\in B_n \setminus A_{n+1}$两种情况.
+
+      若$y \notin B_n \setminus A_{n+1}$则对于任意的$n \geq 0$都有$y \in A_n \cap B_n$与前文的$x$相对应,即存在$x \in A_n \cap B_n$使得$x = y$.
+
+      若$\exists n \geq 0 , y \in B_n \setminus A_{n+1}$则$y \in B_n$但是$y \notin f(A_n)$.但是由于$A_n \supset B_n$于是必然有$y \in A_n$即存在$x \in A_{n-1}\subset A$使得$f(x) = y$于是$\phi$是满射
+
+    综上所述,$\phi$是双射,于是有$A$与$B$等势,即$|A| = |B|$$\Box$
+
+   此外,也可以采用"先祖"法构建双射来验证其本质与第一种方法并无不同
+
+   [证明]
+
+   根据假设存在两个单射$f : A \to B$以及$g : B \to A$.接下来我们应当验证$f$和$g$可以构建一个双射$h : A\to B$.这样便可以证明$|A| =|B|$.
+
+   如果$a \in A$由于$g$是一个单射于是$g^{-1}(a)$要么是一个空集(我们称此时的$a$是$\text{parentless}$的)要么由一个固定的$b \in B$组成(在这种情况下我们称$b$是$a$的$\text{parent}$).同理可以对$B$也作出类似的定义.
+
+   接下来我们对于每个$a \in A$追溯其"先祖($\text{ancestry}$)".这可能有三种情况.(其实也就是前一个证明中构建$\phi$的几种情况)
+
+   1. 最终追溯到一个$\text{parentless}$的$a\in A$上($\text{an ancestor of } a \in A$)
+   2. 最终追溯到一个$\text{parentless}$的$b \in B$上($\text{an ancestor of } a$)
+   3. 具有无穷个先祖
+
+   接下来我们便可以定义$3$个$A$(或$B$)的子集如下
+   $$
+   \begin{eqnarray*}
+   A_1 &:=& \{a\in A : a\text{有}A\text{上的先祖}\}\\
+   A_2 &:=& \{a\in A : a\text{有}B\text{上的先祖}\}\\
+   A_3 &:=& \{a\in A : a\text{有无穷个先祖}\}\\
+   B_1 &:=& \{b\in B : b\text{有}A\text{上的先祖}\}\\
+   B_2 &:=& \{b\in B : b\text{有}B\text{上的先祖}\}\\
+   B_3 &:=& \{b\in B : b\text{有无穷个先祖}\}\\
+   \end{eqnarray*}
+   $$
+   不难发现$A_i$(或$B_i$)之间是两两无交的(若不然,则$a$同时在$A$和$B$上有先祖,或$A$上有先祖但是有无穷多个先祖等矛盾情况).并且它们的并就是$A$(或$B$).
+
+   不难得出$f\mid A_i$是一个$A_i$到$B_i$的双射其中$i = 1,3$(由于对于$a\in A_i$均有$a$有在$A$上的先祖,于是$f(a)$也有在$A$上的先祖,即$f(a)\in B_1$,由于$f$为单射,于是对于任意的$b \in B_1$,存在唯一的$a \in A_1$与之对应,并且对于任意的$a \in A_1$也存在唯一的$b \in B_1$与之对应,于是可以得到$f \mid A_1$是双射,同理推出无穷个先祖的情况.但是对于$A_2$的情况则不一定,因为$b$的原像可能是空集,即自身就是先祖的情况)
+
+   同理$g \mid B_2$也是一个$B_2$到$A_2$的双射.
+
+   于是可以构建一个良定义的$h$如下
+   $$
+   h(a) = 
+   \left\{
+   \begin{array}{c}
+   f(a) , & a \in A_1 \cup A_3\\
+   g^{-1}(a) , & a \in A_2\\
+   \end{array}
+   \right.
+   $$
+   得到$|A|= |B|$.$\Box$
+
+   
+
+4. ($\text{Cantor}$无最大基数定理)对于任意集合$A$,均有$|\mathcal{P}(A)|> |A|$
+
+   存在单射$\phi: a \mapsto \{a\}$然而由于$Y :=\{a \in A : a \notin \phi(a)\}\subset A$不在$\phi$的像中,于是对于任意的单射$\phi$都不是满射.于是有$|A| \neq |\mathcal{P}(A)|$即$|A| < |\mathcal{P}(A)|$
+
+5. 根据良序集中验证的线性性质以及序数引入基数的定义可以得到
+
+   对于$a$和$b$两个基数有且仅有$3$种情况成立
+
+   $a < b , a = b , a>b$
+
+6. 任何无限集$E$中必然包含可数集(这表明在无限集的基数中,可数集的基数是最小的,即可数集是最小的无限集)
+
+   因$E \neq \varnothing$于是存在$a_1 \in E$.又因$E$为无限集,于是有$E \setminus \{a_1\} \neq \varnothing$,所以存在$a_2 \in E \setminus\{a_1\}$
+
+   于是可以按照如上步骤使用数学归纳法得到一族数列$\{a_i\}$这个数列构成一个可数集且元素两两互异.
+
+7. 设$\{A_n\}$是可数集合列,则$A = \bigcup_{n=1}^\infty A_n$也是可数集
+
+   不妨设$\{A_n\}$是互不相容的集合列,由于$A_n$可数,即$A_n = \{a_{n1},a_{n2},\cdots,a_{nk},\cdots\}$
+
+   作映射$\varphi : A \to \Z_{\geq 0}, a_{nk} \mapsto 2^n \times 3^k$,则$\varphi$为单射,所以由$|A|\leq |\Z_{\geq 0}| = \aleph_0$但是$|A| \geq |A_n| = \aleph_0$于是有$|A| = \aleph_0$
+
+   在该性质中,我们可以把$A_n$从无限个改为有限个,只需要把大于某个值$k$的$A_n$改为$A_k$即可.
+
+8. 有限个可数集$A_k(1\leq k \leq n)$的直积$B_n = \prod_{k = 1}^n A_k$是可数集
+
+   设$A_k = \{a_{k1},a_{k2},\cdots,a_{kj},\cdots\}$.对每个固定的$a_{1m}$.
+
+   令$E_m = \{(a_{1m},a_{2k}):a_{2k}\in A_2\}$则$E_m$与$A_2$对等,从而是可数集.于是
+
+   $B_2 = A_1 \times A_2 = \bigcup_{m = 1}^\infty E_m$是可数集可以由$7$推出,同理,可以由$B_n = B_{n-1}\times A_n$推出其可数.
+
+   该性质对于无限直积$\prod_{n = 1}^\infty A_n$不成立.
+
+9. 设$A$为无限集,$B$为至多可数集.则$|A\cup B| = |A|$
+
+   因为$A$是无限集,所以$A$中必然包含可数集$A_1$,令$A^*= A\setminus A_1$则$A_1 \cup B \sim A_1$,于是有$A\cup B = (A^* \cup A_1)\cup B = A^* \cup(A_1 \cup B)$
+
+10. 代数数集是可列集
+
+    > 定义(代数数)：
+    >
+    > 代数数可以定义为“有理系数多项式的复根”或“整系数多项式的复根”。
+    >
+    > 第一个定义可以具体描述为：
+    >
+    > 设$z$为复数。如果存在正整数$n$以及$n+1$个有理数$q_0,\cdots,q_n$并且$q_n \neq 0$，使得
+    > $$
+    > q_nz^n + \cdots + q_1z + q_0 = 0
+    > $$
+    > 则称$z$是一个代数数.
+    >
+    > 在这个定义中，由于$q_nz^n+\cdots +q_1z+q_0=0$可以推出$a_nz^n+\cdots+a_1z+a_0=0$，其中整数$a_0,a_1,\cdots,a_n$是分别等于$Mq_0,Mq_1,\cdots,Mq_n$,$M$是$n+1$个有理数$q_0,q_1,\cdots,q_n$的分母的最小公倍数。所以有利系数多项式的复根和整系数多项式的复根是相互等价的.
+    >
+    > 
+    >
+    > 定义(超越数)
+    >
+    > 超越数是代数数的相反，也就是说若$x$是一个超越数，那么对于任何整数$a_n,a_{n-1},\cdots,a_0$都符合
+    > $$
+    > a_nx^n +a_{n-1}x^{n-1}+\cdots+a_1x+a_0 \neq 0
+    > $$
+    > 其中$(a_n \neq 0)$
+
+    [证明($\text{Cantor}$)]
+
+    对任一个$n$次代数方程指定一个数(叫做高)$N$如下
+    $$
+    N = n-1 + |a_0| +|a_1| +\cdots + |a_n|
+    $$
+    其中$a_i$都是这个方程的系数.数$N$是一个正整数,对于每个$N$,以$N$为高的代数方程是有限个,它们的全部解也是有限个,于是除去重复的以外,所对应的代数数也是有限个,设为$\phi(N)$个.不难得出$\phi(1) = 1,\phi(2) = 3,\phi(3) = 5$于是从$N= 1$开始,对于每个所对应的代数数从$1$到$n_1$进行标号.由于每一个代数数总一定会编到好,而且必与一个唯一的正整数相对应,从而所有代数数的集合是可列的$\Box$
+
+11. 无理数集和超越数集的基数为$\aleph$.
+
+    不难发现无理数集就是有理数集$\Q$关于$\R^1$的余集$\Q^c$,由于$\Q$可数并且结合性质$9$可以得到
+    $$
+    |\Q^c| = |\Q^c \cup \Q| = |\R| = \aleph
+    $$
+    同理,记实代数数集为$A_0$,则超越数集即为$A_0^c$于是可以得到
+    $$
+    |A_0^c| = |A_0^c \cup A_0| = |\R| = \aleph
+    $$
+    
+
+
 
 # $\R^1$中的序列与子集的一些基本概念和性质
 
@@ -1178,6 +1380,56 @@ $$
    证明从略
 
 
+
+## 集合列与其上下极限
+
+对于集合,我们同样可以以类似于数列的方式对于集合进行编号(比如我们常见的描述有一族集合),这样就可以形成一个集合列$\{A_n\}$(由递归原理构建一个$\Z_{\geq 1}$到$\text{Grothendieck}$宇宙$U$的映射$n \mapsto A_n \in U$保证其成立,至于$\text{Grothendieck}$宇宙较为晦涩难懂,笔记中不会提及).
+
+接着,不难定义集列的单调性:
+
+首先思考,如何定义集列的递增,不难发现递增这个概念指逐渐增大,但是集合之间的逐渐增大的概念又该如何表示呢?
+
+集合之间逐渐增大,首先需要包含原有集合内的元素,此外还需要增加一些其他的元素才可以认为是逐渐增大.
+
+若$A_k \subset A_{k +1}$$(\forall k \in \Z_{\geq 1})$则称$\{A_n\}$为递增集列,这时称$\bigcup_{n = 1}^\infty A_k$为$\{A_k\}$的极限集,记为
+$$
+\lim_{n \to \infty}A_n = \bigcup_{k = 1}^\infty A_k
+$$
+接下来可以得到集合递减的概念,
+
+若$A_k \supset A_{k + 1}$($\forall k \in \Z_{\geq 1}$)则称$\{A_n\}$为递减集列,这时称$\bigcap_{n = 1}^\infty A_k$为$\{A_k\}$的极限集,记为
+$$
+\lim_{n \to \infty} = \bigcap_{k = 1}^\infty A_k
+$$
+对于任意集合列$\{A_n\}$,也可由它所产生的单调集列
+$$
+B_k = \bigcup_{n = k}^\infty A_n (\text{递减})\text{和}E_k = \bigcap_{n = k}^\infty A_n(\text{递增})
+$$
+定义$\{A_n\}$的上下极限集:
+$$
+\begin{eqnarray*}
+\limsup_{n \to \infty}A_n = \lim_{k \to \infty}B_k = \bigcap_{k = 1}^\infty B_k = \bigcap_{k = 1}^\infty(\bigcup_{n = k}^\infty A_n)
+\\
+\liminf_{n \to \infty}A_n = \lim_{k \to \infty}E_k = \bigcup_{k = 1}^\infty E_k = \bigcup_{k = 1}^\infty(\bigcap_{n = k}^\infty A_n)
+\end{eqnarray*}
+$$
+
+若$\liminf_{n \to \infty}A_n = \limsup_{n \to \infty}A_n = A$则$\lim_{n \to \infty}A_n = A$.
+
+### 性质
+
+1. $$
+   \begin{eqnarray*}
+   \limsup_{n \to \infty}A_n = \{x : \forall k , \exists n \geq k ,\text{使得}x \in A_n\}\\
+   \liminf_{n \to \infty}A_n = \{x : \exists k , \text{使得}\forall n \geq k ,x \in A_n\}
+   \end{eqnarray*}
+   $$
+
+   
+
+2. 
+
+3. 
 
 
 
